--- a/css/index.css
+++ b/css/index.css
@@ -6,15 +6,18 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 /* Sections Styling */
 .hero-section {
-    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 100px;
-    margin-left: 100px;
-    margin-top: 180px;
+    margin-right: 6.9%;
+    margin-left: 6.9%;
+    margin-top: 140px;
 
 }
 
@@ -22,4 +25,28 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+/* Offer Section */
+
+.offer-section {
+    position: relative;
+    background-color: #F2EDE6;
+    width: 100%;
+    height: 100vh;
+    margin-top: 22vw;
+}
+
+.offer-img-layout {
+    position: absolute;
+    top: -19vw;
+}
+
+.offer-img-container {
+    margin: 0 14% 0 14%;
+}
+
+.offer-img {
+    width: 100%;
+    height: auto;
 }
