--- a/css/navigation.css
+++ b/css/navigation.css
@@ -20,8 +20,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 6.9%;
+    padding-right: 6.9%;
 }
 
 .nav-left {
