--- a/css/index.css
+++ b/css/index.css
@@ -31,10 +31,9 @@ body::-webkit-scrollbar {
 
 .offer-section {
     position: relative;
-    background-color: #F2EDE6;
-    width: 100%;
-    height: 100vh;
     margin-top: 22vw;
+    background-color: #F2EDE6;
+    min-height: 100vh;
 }
 
 .offer-img-layout {
@@ -49,4 +48,35 @@ body::-webkit-scrollbar {
 .offer-img {
     width: 100%;
     height: auto;
+}
+
+.offer-heading {
+    padding-top: 35vw;
+    padding-bottom: 300px;
+    margin-left: 6.9%;
+}
+
+.offer-gird-img {
+    width: 59%;
+    background-color: yellowgreen;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.grid-img-container-1 {
+    position: relative;
+    background-color: tomato;
+    width: 286px;
+    height: 390px;
+}
+
+.square {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: violet;
+    right: 0;
 }
