--- a/css/index.css
+++ b/css/index.css
@@ -52,31 +52,50 @@ body::-webkit-scrollbar {
 
 .offer-heading {
     padding-top: 35vw;
-    padding-bottom: 300px;
+    padding-bottom: 20%;
     margin-left: 6.9%;
 }
 
+/* Offer Grid */
+
 .offer-gird-img {
-    width: 59%;
-    background-color: yellowgreen;
+    position: relative;
     bottom: 0;
     right: 0;
-    position: absolute;
+    width: 61%;
+    height: 50%;
+    background-color: yellowgreen;
+}
+
+.grid-img-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-color: tomato;
+    width: 100%;
+    height: 100%;
+}
+
+.grid-img-1 {
+    width: 100%;
     display: flex;
     justify-content: flex-end;
+    background-color: turquoise;
 }
 
-.grid-img-container-1 {
-    position: relative;
-    background-color: tomato;
-    width: 286px;
-    height: 390px;
+.offer-img-1 {
+    height: 400px;
+    padding-right: 100px;
 }
 
-.square {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    background-color: violet;
-    right: 0;
+.grid-img-2 {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    background-color: turquoise;
+}
+
+.offer-img-2 {
+    height: 400px;
+    padding-right: 100px;
 }
